# Revision

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  brief_handoff_note.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
asset/: asset.json
dev_utils/: agent_readme.md  dump_log.py
doc/: revision.md  revision_boot02_proposal.md  revision_boot03_proposal.md  revision_coding_standard.md  revision_core01_proposal.md  revision_file_map.html  revision_file_map.json  revision_getstarted.md  revision_hig.md  revision_hig_inventory.md  revision_padlington_inventory.md  revision_plan.html  revision_plan.json  revision_plan_archive.json  revision_player_proposal.md  revision_poc.md  revision_requirements_v1.md  revision_schema.html  revision_schema.json  revision_skin_inventory.md
doc/completed/: revision_boot02_proposal.md  revision_boot03_proposal.md  revision_core01_proposal.md  revision_core02_proposal.md  revision_dsp02_proposal.md  revision_eng01_proposal.md  revision_eng02_proposal.md  revision_eng06_proposal.md  revision_midi01_proposal.md  revision_misc02_proposal.md  revision_rec01_proposal.md  revision_rec02_proposal.md  revision_ui01_proposal.md  revision_ui06_proposal.md  revision_uikit_scroll_proposal.md
src/rust/app/: Cargo.toml
src/rust/app/src/: audio.rs  follow.rs  latency.rs  lib.rs  main.rs  mhall.rs  midi.rs  pad.rs  player.rs  record.rs  roll.rs
src/rust/app/src/follow/: test.rs
src/rust/app/src/latency/: test.rs
src/rust/app/src/player/: test.rs
src/rust/app/src/record/: test.rs
src/rust/app/src/roll/: test.rs
src/rust/core/: Cargo.toml
src/rust/core/src/: command.rs  error.rs  id.rs  lib.rs  note.rs  phrase.rs  scale.rs  tick.rs  tuning.rs
src/rust/core/src/note/: test.rs
src/rust/core/src/scale/: test.rs
src/rust/core/src/tick/: test.rs
src/rust/core/src/tuning/: equal.rs  test.rs
src/rust/core/src/tuning/equal/: test.rs
src/rust/dsp/: Cargo.toml
src/rust/dsp/src/: bake.rs  lib.rs  profile.rs  rand.rs  spec.rs  spectrum.rs
src/rust/dsp/src/bake/: test.rs
src/rust/dsp/src/profile/: test.rs
src/rust/dsp/src/rand/: test.rs
src/rust/dsp/src/spectrum/: test.rs
src/rust/dsp/tests/it/: alias.rs  main.rs
src/rust/engine/: Cargo.toml
src/rust/engine/src/: automation.rs  command.rs  driver.rs  engine.rs  error.rs  format.rs  graph.rs  guard.rs  instrument.rs  lib.rs  live.rs  obs.rs  param.rs  port.rs  position.rs  table.rs  time.rs  tone.rs  voice.rs
src/rust/engine/src/automation/: test.rs
src/rust/engine/src/command/: test.rs
src/rust/engine/src/driver/: device.rs  offline.rs
src/rust/engine/src/engine/: test.rs
src/rust/engine/src/graph/: test.rs
src/rust/engine/src/guard/: test.rs
src/rust/engine/src/instrument/: test.rs
src/rust/engine/src/obs/: test.rs
src/rust/engine/src/port/: test.rs
src/rust/engine/src/position/: test.rs
src/rust/engine/src/time/: test.rs
src/rust/engine/src/tone/: test.rs
src/rust/engine/src/voice/: test.rs
src/rust/log/: Cargo.toml
src/rust/log/src/: error.rs  lib.rs  place.rs  schema.sql  sink.rs
src/rust/log/src/sink/: test.rs
src/rust/log/tests/it/: log.rs  main.rs
src/rust/midi/: Cargo.toml
src/rust/midi/src/: correlate.rs  devices.rs  event.rs  input.rs  lib.rs  ports.rs  snapshot.rs
src/rust/midi/src/correlate/: test.rs
src/rust/midi/src/devices/: test.rs
src/rust/midi/src/event/: test.rs
src/rust/midi/src/input/: test.rs
src/rust/midi/src/snapshot/: test.rs
src/rust/midi/tests/it/: main.rs
src/rust/sched/: Cargo.toml
src/rust/sched/proptest-regressions/tempo/: test.txt
src/rust/sched/src/: compile.rs  error.rs  lib.rs  tempo.rs  tune.rs
src/rust/sched/src/tempo/: test.rs
src/rust/sched/tests/it/: main.rs  mhall.rs  sound.rs
src/rust/store/: Cargo.toml
src/rust/store/src/: error.rs  exec.rs  genesis.rs  journal.rs  lib.rs  project.rs  query.rs  replay.rs  schema.rs  schema.sql
src/rust/store/src/exec/: material.rs  tuning.rs
src/rust/store/tests/it/: catalog.rs  genesis.rs  history.rs  main.rs  property.rs  realize.rs
src/rust/store/tests/proptest-regressions/: property.txt
src/rust/testkit/: Cargo.toml
src/rust/testkit/src/: fixture.rs  image.rs  lib.rs  spectrum.rs  state.rs  temp.rs
src/rust/testkit/src/spectrum/: test.rs
src/rust/ui_kit/: Cargo.toml
src/rust/ui_kit/src/: kit.rs  lib.rs  pane.rs  skin.rs
src/rust/ui_kit/src/kit/: draw.rs  event.rs  test.rs
src/rust/ui_kit/src/pane/: test.rs
src/rust/ui_kit/src/skin/: test.rs
src/rust/ui_kit/tests/it/: golden.rs  main.rs  pane.rs
src/rust/ui_mech/: Cargo.toml
src/rust/ui_mech/benches/: blur.rs
src/rust/ui_mech/src/: a11y.rs  blur.rs  canvas.rs  dirty.rs  error.rs  fill.rs  geometry.rs  host.rs  input.rs  lib.rs  mech.rs  paint.rs  text.rs  window.rs
src/rust/ui_mech/src/a11y/: test.rs
src/rust/ui_mech/src/blur/: test.rs
src/rust/ui_mech/src/dirty/: test.rs
src/rust/ui_mech/src/geometry/: test.rs
src/rust/ui_mech/src/mech/: route.rs
src/rust/ui_mech/src/paint/: test.rs
src/rust/ui_mech/src/text/: test.rs
src/rust/ui_mech/src/window/: test.rs
src/rust/ui_mech/tests/it/: golden.rs  main.rs
src/rust/xtask/: Cargo.toml
src/rust/xtask/src/: filemap.rs  main.rs  plan.rs  schema.rs  tmon.rs
src/rust/xtask/src/plan/: test.rs
