# Virtual workspace manifest — no code of its own. Layout per
# doc/revision_coding_standard.md; approved in doc/revision_boot02_proposal.md.

[workspace]
resolver = "3"
members = ["src/rust/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
repository = "https://github.com/remidodoso/Revision"

[workspace.dependencies]
# Every entry arrives via a dependency checkpoint (getstarted, ground rule 2):
# version stated once here, inherited by members.
# Approved at core-01 §7.8 (serde/serde_json/rusqlite) and core-02 §8.2 (thiserror).
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
# bundled: ship SQLite itself (no system dependency). series: generate_series for
# v_realized loop unrolling. hooks: cache invalidation later. backup: hot backup.
rusqlite = { version = "0.40.1", features = ["bundled", "series", "hooks", "backup"] }
# Property testing (boot-03): failing cases persist to proptest-regressions/,
# which is committed, so every shrunk counterexample becomes a permanent test.
proptest = "1.11.0"
# UI stack, approved at ui-01. CPU rasterization, not GPU: the kit-facing API is a
# paint list, so the backend stays swappable (ui-01 §2). All four are confined to
# rev-ui-mech — rev-ui-kit depends on rev-ui-mech and nothing else, which is what
# makes "no native handle ever leaks" structural rather than aspirational.
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.12"
cosmic-text = "0.19"

# Audio, approved at eng-01. rev-engine depends on these two and nothing else —
# an engine that speaks only physics (R-312) has nothing to import from a model
# of music. cpal is the device; rtrb is the three SPSC rings of eng-01 §4 (the
# position seqlock is ours, since it is a different structure, not a duplicate).
# The `asio` feature is never enabled here: proprietary SDKs stay out of the repo.
cpal = "0.18.1"
rtrb = "0.3.4"

# MIDI I/O, approved at midi-01. Cross-platform (WinMM / CoreMIDI / ALSA), MIT,
# the settled Rust choice. rev-midi depends on midir and rev-core only; the
# thru ring reaches rev-engine, which stays cpal+rtrb.
midir = "0.11.0"

# The bake's transform, approved at dsp-02 §12.2. `realfft` is the real-input
# wrapper and brings `rustfft` with it, so only one entry is declared; both are
# MIT/Apache and pure Rust. It is a dependency of rev-dsp (app-side, allocates
# freely) and a *dev*-dependency of rev-testkit — an FFT never enters
# rev-engine, and never ships.
realfft = "3.5.0"

# Build profiles: external dependencies and RT crates optimized even in dev
# builds (debug-assertions/overflow-checks stay on); other workspace members
# default to opt-level 0 — raise to 1 empirically if iteration feels sluggish.
# True --release is for latency measurement and real use.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rev-engine]
opt-level = 3

# The bake is a numeric loop over 2^17 bins, sixteen times per instrument. At
# opt-level 0 it is minutes; optimized it is a moment. Debug assertions stay on.
[profile.dev.package.rev-dsp]
opt-level = 3

# Rasterization is per-pixel work and unusably slow unoptimized: a full-panel
# repaint measured 18.6 ms of blur in dev against 3.6 ms in release. Raised
# empirically, exactly as boot-02 anticipated. Debug assertions stay on.
[profile.dev.package.rev-ui-mech]
opt-level = 2
