[package]
name = "rev-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rev-ui-mech = { path = "../ui_mech" }
rev-ui-kit = { path = "../ui_kit" }
rev-core = { path = "../core" }
rev-store = { path = "../store" }
rev-sched = { path = "../sched" }
rev-engine = { path = "../engine" }
# dsp-02: the bake is app-side work, and the app is where its result is turned
# into tables and handed across the seam.
rev-dsp = { path = "../dsp" }
rev-midi = { path = "../midi" }
rev-log = { path = "../log" }

# The windowed application.
[[bin]]
name = "rev-app"
path = "src/main.rs"

# The headless first sound: a device, a tone, and what it did. Kept as its own
# binary so that "is there a device problem?" and "is there a wiring problem?"
# are separate questions (eng-03).
[[bin]]
name = "rev-tone"
path = "src/bin/tone.rs"

# The first musical sound: MHALL from stored material, compiled and played.
[[bin]]
name = "rev-mhall"
path = "src/bin/mhall.rs"

[dev-dependencies]
rev-testkit = { path = "../testkit" }
