[package]
name = "rev-log"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# Approved at eng-01 §9.3. rusqlite only: rev-log sits below app, store and ui,
# so it may not depend on any of them, and rev-engine deliberately does not
# depend on *it* (eng-01 §14) — which is what keeps bundled SQLite out of the
# audio engine's dependency tree.
[dependencies]
rusqlite.workspace = true
thiserror.workspace = true

[[test]]
name = "it"
path = "tests/it/main.rs"
