[package]
name = "rev-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rev-core = { path = "../core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rev-testkit = { path = "../testkit" }
proptest.workspace = true
