[package]
name = "rev-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rev-core = { path = "../core" }
rev-store = { path = "../store" }
rusqlite.workspace = true
# dsp-02 §9: the spectral helper. rev-testkit is consumed via dev-dependencies
# only, so an FFT here never ships — and never enters rev-engine.
realfft.workspace = true
